# pif-pipeline

./: .gitignore  Containerfile  build.sh  pyproject.toml
pipeline/: config.py  db.py  main.py  models.py  notify.py
pipeline-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
pipeline-ui/src/: App.tsx  index.css
pipeline-ui/src/api/: client.ts  hooks.ts  types.ts
pipeline-ui/src/components/: CorrectionForm.tsx  CorrectionsPanel.tsx  (+9 more)
pipeline/actions/: base.py  email_move.py  exception_queue.py  expense.py  finance.py  immich_album.py  immich_tag.py  location.py  notify.py  paperless.py  pif_index.py  registry.py  stuff.py  train_journey.py  wine.py
pipeline/api/: app.py  deps.py  routes_corrections.py  routes_decisions.py  routes_exceptions.py  routes_preview.py  routes_retrospective.py  routes_rules.py  routes_settings.py  routes_status.py  usage_tracker.py
pipeline/audit/: log.py  models.py
pipeline/classify/: base.py  claude.py  clip.py  deterministic.py  pet.py  tier_runner.py
pipeline/exceptions/: queue.py
pipeline/feedback/: corpus.py  corrections.py  differ.py  webhook.py
pipeline/ingest/: base.py  email.py  immich.py  scanner.py
pipeline/retrospective/: reporter.py  runner.py  sources.py
pipeline/rules/: conditions.py  engine.py  loader.py  templates.py
pipeline/spam/: processor.py
pipeline/unsubscribe/: execute.py  extract.py  processor.py
pipeline_mcp/: server.py
scripts/: classify_paperless.py  download_vivino_labels.py  import_vivino.py
shared/: clip_labels.yaml  config.yaml  rules.yaml
(+4 files in other folders)
